syntax = "proto3";

package fstmon.storage;

import "google/protobuf/duration.proto";
import "common.proto";

option go_package = "github.com/eterline/fstmon/internal/infra/grpc/flugel/common";

// Partition usage (dynamic)
message PartitionUsage {
    uint64 total = 1;
    uint64 used = 2;
    uint64 free = 3;
    double used_percent = 4;

    uint64 inodes_total = 5;
    uint64 inodes_used = 6;
    uint64 inodes_free = 7;
    double inodes_used_percent = 8;
}

// Partition (static)
message Partition {
    string device = 1;
    string mount = 2;
    string filesystem = 3;
    repeated string options = 4;
    PartitionUsage usage = 5;
}

message Partitions {
    repeated Partition partitions = 1;
}

// Disk I/O
message DiskIO {
    uint64 iops_in_progress = 1;

    fstmon.common.IOUint64 ops = 2;
    fstmon.common.IOUint64 merged_ops = 3;
    fstmon.common.IOUint64 bytes = 4;

    fstmon.common.IOUint64 ops_per_sec = 5;
    fstmon.common.IOUint64 merged_ops_per_sec = 6;
    fstmon.common.IOUint64 bytes_per_sec = 7;

    fstmon.common.IODuration time = 8;
    google.protobuf.Duration io_time = 9;
    google.protobuf.Duration weighted_io = 10;
}

message DiskIOMap {
    map<string, DiskIO> disks = 1;
}

service StorageService {
    rpc GetPartitions(GetPartitionsRequest) returns (PartitionsResponse);
    rpc GetDiskIO(GetDiskIORequest) returns (DiskIOMapResponse);
}

message GetPartitionsRequest {}
message GetDiskIORequest {}

message PartitionsResponse { Partitions partitions = 1; }
message DiskIOMapResponse { DiskIOMap io = 1; }
